--- a/01.3_ts_datasets.ipynb
+++ b/01.3_ts_datasets.ipynb
@@ -2,48 +2,41 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e01d374-6dde-4c5c-b699-5b586d4d99e0",
+   "id": "c31b75a0-3c13-4513-9d5b-46cc4d4fc4aa",
    "metadata": {},
    "source": [
-    "# Time Series Datasets: GluonTS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "177bb38b-9933-4335-b1b5-a35ca190281f",
-   "metadata": {},
-   "source": [
-    "In this notebook, we will look at a python library, GluonTS, that is a python library for time series modeling, with a focus on deep learning based models, based on PyTorch and MXNet.\n",
+    "# Time Series Datasets Using GluonTS Library\n",
     "\n",
-    "We will use the library to develop models later in the series. However, this notebook is only to get ourselves familiar with the dataset loading capability of GluonTS. \n",
+    "In this notebook, we will explore the GluonTS library, a Python library designed for time series modeling with a focus on deep learning models, based on PyTorch and MXNet.\n",
     "\n",
-    "Library documentation: [https://ts.gluon.ai/](https://ts.gluon.ai/stable/index.html#)\n",
+    "While we will develop models using this library later in the series, this notebook aims to familiarize ourselves with GluonTS's dataset loading capabilities.\n",
     "\n",
-    "Let's install the library! Run the following command in your shell - \n",
+    "Library documentation: [GluonTS Documentation](https://ts.gluon.ai/stable/index.html#)\n",
+    "\n",
+    "## Installation\n",
+    "\n",
+    "Install the library by running the following command in your shell:\n",
     "\n",
     "```bash\n",
-    "pip install \"gluonts\"\n",
+    "pip install gluonts\n",
     "```\n",
     "\n",
-    "`gluonts` provides a package named `gluonts.dataset` [documentation](https://ts.gluon.ai/stable/api/gluonts/gluonts.dataset.html). We will use a subpackage of `gluonts.dataset` named `gluonts.dataset.repository` to download several commonly available datasets online. \n",
+    "## Dataset Loading with GluonTS\n",
     "\n",
-    "Which datasets are available in the package? We can look at the list of available datasets in the [source code] (https://ts.gluon.ai/stable/_modules/gluonts/dataset/repository/datasets.html#get_download_path) or `dataset_names` variable from the subpackage. Most of these datasets are similar to what we have been looking at in the previous notebooks. \n",
+    "GluonTS provides the `gluonts.dataset` package ([documentation](https://ts.gluon.ai/stable/api/gluonts/gluonts.dataset.html)), which includes a subpackage `gluonts.dataset.repository` for downloading commonly available datasets.\n",
     "\n",
-    "For example, if we have to download the Traffic [1] dataset, we can use the corresponding key. \n",
+    "### Available Datasets\n",
     "\n",
-    "**Note:** It may take some time to download the dataset in `$HOME/.gluonts` for the first time. From the next time, it looks for the dataset in `$HOME/.gluonts` before downloading.\n",
+    "You can view the list of available datasets in the [source code](https://ts.gluon.ai/stable/_modules/gluonts/dataset/repository/datasets.html#get_download_path) or by accessing the `dataset_names` variable in the subpackage. Many of these datasets are similar to those we have explored in previous notebooks.\n",
     "\n",
+    "For example, to download the Traffic dataset, use the corresponding key - 'traffic'.\n",
     "\n",
-    "**GluonTS vs Loading your own data**\n",
+    "**Note:** The first download may take some time as the dataset is stored in `$HOME/.gluonts`. Subsequent accesses will check this directory before downloading again.\n",
     "\n",
-    "Note: GluonTS applies its preprocessing on the datasets as well as specifies some meta information about train-test splits. One can get this information by reading the specific loading functions used in the source code. For example, \"traffic\" data follows the preprocessing specified here in `generate_lstnet_dataset` ([link](https://github.com/jgasthaus/gluon-ts/blob/c47ac9a0e11439edb9bdaae80975fefd035ae595/src/gluonts/dataset/repository/_lstnet.py#L125)). From the source code, one can infer that the dataset will be loaded for `rolling_evaluations=7` as a result, we should expect 7 time series of incremetally larger horizons for evluating our models.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5df1e6da-f6d4-4d2e-8361-e9f3922e81cc",
-   "metadata": {},
-   "source": [
+    "### GluonTS vs. Loading Your Own Data\n",
+    "\n",
+    "GluonTS applies preprocessing to the datasets and specifies meta information about train-test splits. You can review this preprocessing by examining the specific loading functions in the source code. For instance, the \"traffic\" dataset follows the preprocessing defined in `generate_lstnet_dataset` ([source code link](https://github.com/jgasthaus/gluon-ts/blob/c47ac9a0e11439edb9bdaae80975fefd035ae595/src/gluonts/dataset/repository/_lstnet.py#L125)). This function indicates that the dataset will be loaded for `rolling_evaluations=7`, resulting in 7 time series with incrementally larger horizons for model evaluation.\n",
+    "\n",
     "## Setup"
    ]
   },
@@ -87,9 +80,9 @@
    "source": [
     "## Download & Load Traffic Dataset\n",
     "\n",
-    "**Traffic dataset**: A multivariate dataset containing a collection of 48 months (2015-2016) hourly data from the California Department of Transportation. The data contains the road occupancy rates (value between 0 and 1) measured by different senosrs on San Francisco Bay area freeways. This dataset was first used by Lai et al. (2017) for someone to look further into what mdeling techniques perform how on these datasets.\n",
+    "The **Traffic dataset** is a multivariate dataset containing 48 months (2015-2016) of hourly data from the California Department of Transportation. It includes road occupancy rates (values between 0 and 1) measured by various sensors on San Francisco Bay area freeways. This dataset was first utilized by Lai et al. (2017) to evaluate the performance of different modeling techniques.\n",
     "\n",
-    "[[1] Lai et al. 2017 Modeling Long- and Short-Term Temporal Patterns with Deep Neural Networks](https://arxiv.org/abs/1703.07015)"
+    "[[1] Lai et al. 2017, Modeling Long- and Short-Term Temporal Patterns with Deep Neural Networks](https://arxiv.org/abs/1703.07015)"
    ]
   },
   {
@@ -103,23 +96,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "001986d3-047b-4272-a7d6-54ba7e014df7",
+   "id": "b431e5a1-6c41-40c5-b0b3-97e6d1561348",
    "metadata": {},
    "source": [
-    "## Metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b480abe8-2c20-4e29-9b31-bf1b0cfe3eb5",
-   "metadata": {},
-   "source": [
-    "GluonTS Datasets have their metadata that contain information about the specifics of the time series, such as the \n",
-    "- frequency of data (hourly 'H', monthly 'M', etc.)\n",
-    "- prediction length for the forecasting horizon,\n",
-    "- cardinality: number of time series in the dataset (1 for univariate dataset)\n",
-    "- Other exogenous variables, if present."
+    "**Metadata**:\n",
+    "GluonTS datasets come with metadata that provide specific information about the time series, including:\n",
+    "\n",
+    "- **Frequency of Data:** Indicates the time interval of the data points (e.g., hourly 'H', monthly 'M').\n",
+    "- **Prediction Length:** Specifies the forecasting horizon.\n",
+    "- **Cardinality:** The number of time series in the dataset (1 for univariate datasets).\n",
+    "- **Exogenous Variables:** Details about any additional variables present in the dataset.\n"
    ]
   },
   {
@@ -173,8 +161,14 @@
    "source": [
     "## Training Dataset\n",
     "\n",
-    "GluonTS has methods to present time series and split them into subsets for training estimators / machine learning models. \n",
-    "Let's look at how GluonTS presents these datasets."
+    "GluonTS provides methods to organize and split time series datasets into subsets for training machine learning models. Let's explore how GluonTS handles these datasets.\n",
+    "\n",
+    "The time series data is organized in a GluonTS dataset as follows\n",
+    "\n",
+    "- **'target':** Each dimension (multivariate has multiple dimensions) is represented as a 1D numpy array.\n",
+    "- **'start':** Contains information about the starting point and the period of the observations.\n",
+    "- **'item_id':** The identifier of the feature or dimension.\n",
+    "- **'feat_static_cat':** Contains the index of the feature or dimension in a numpy array."
    ]
   },
   {
@@ -219,27 +213,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733bc757-327d-47c7-9a96-a488ec7956f4",
-   "metadata": {},
-   "source": [
-    "Here is how time series data is arranged in the dataset - \n",
-    "\n",
-    "- 'target': Each dimension (multivariate has multiple dimensions) is represented as a 1D numpy array\n",
-    "- 'start': It contains information about the starting point and the period of the observations\n",
-    "- 'item_id': It's the id of the feature or dimension.\n",
-    "- 'feat_static_cat': it contains the index of the feature or dimension in a numpy array."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "daa4ad14-df19-416f-9583-fa868c1ed32f",
    "metadata": {},
    "source": [
     "## Test Dataset\n",
     "\n",
-    "Following Lai et al. (2017), the forecasting task is to make hourly predictions for a day. The dataset has been split into 7 test series to assess the estimator on seven test series, such that the input to the model is training set.\n",
+    "Following Lai et al. (2017), the forecasting task involves making hourly predictions for a day. The dataset is split into 7 test series to evaluate the estimator on these series, using the training set as input to the model.\n",
     "\n",
-    "The arrangement of test dataset into an iterable will become more clear when we create our own custom dataset below. "
+    "The structure of the test dataset will become clearer when we create our own custom dataset below."
    ]
   },
   {
@@ -286,27 +267,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfeaeca-2843-4e0f-8280-3a9409542b0a",
+   "id": "774a4904-8c84-41b5-adbe-77b8e482fdcb",
    "metadata": {},
    "source": [
-    "## Train-Test split\n",
+    "## Train-Test Split\n",
     "\n",
-    "Given a dataset, how is this train-test split done? We will learn more about splitting in the notebook on forecasting.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99c6a219-beeb-4799-b7d3-a801f7f89ba8",
-   "metadata": {},
-   "source": [
+    "How is a dataset split into training and testing sets? We will look at the train-test splitting process in the forecasting notebook.\n",
+    "\n",
     "## Custom Datasets with GluonTS\n",
     "\n",
-    "We can also import our datasets in GLuonTS format.\n",
+    "We can also import our own datasets into the GluonTS format. Let's take an example of a raw dataset without a clear definition of frequency.\n",
     "\n",
-    "We will take an example of a raw dataset with no clear definition of frequency.\n",
-    "\n",
-    "Specfically, the dataset we downloaded earlier in `forecasting` folder contains `economics_97.csv` with no clear definition of the time index. Let's load that dataset in GluonTS.\n"
+    "Specifically, we will use the `economics_97.csv` dataset we downloaded earlier in the `forecasting` folder, which lacks a defined time index. Let's load this dataset into GluonTS.\n"
    ]
   },
   {
@@ -437,14 +409,14 @@
    "id": "a4801848-6899-4f9f-91b1-dade2b9af49e",
    "metadata": {},
    "source": [
-    "**Note:** You can see that the date column has a frequency of `nanoseconds`, wereas we expect this dataset to be yearly measurement of metrics in economics. Let's clean that up and load that in GluonTS.\n",
+    "**Note:** The date column has a frequency of `nanoseconds`, while we expect yearly measurements for this dataset. Let's clean this up and load it into GluonTS.\n",
     "\n",
-    "Just for an example, we need to assume the following -- \n",
+    "For this example, we'll assume the following:\n",
     "\n",
-    "1. Prediction Length: This is the forecasting horizon which we care about. Let's we care about predicting 4 years ahead.\n",
-    "2. Rolling windows: This determines how mnay evaluations we need to do to setup the right metric.\n",
+    "1. **Prediction Length:** The forecasting horizon we care about, e.g., predicting 4 years ahead.\n",
+    "2. **Rolling Windows:** Determines how many evaluations we need to perform to set up the correct evaluation metric.\n",
     "\n",
-    "Rolling window suggests that for every evaluation of time series metrics, we look at the historical data determined by it, and then make predictions about the forecasting horizon determined by the prediction length. \n"
+    "The rolling window approach suggests that for each evaluation of time series metrics, we use the historical data within the window to make predictions for the specified forecasting horizon."
    ]
   },
   {
@@ -488,21 +460,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "c6281e2d-b7b6-4ab0-9ed8-abf91fce6b10",
+   "id": "b436dd6e-fc8d-4267-86b9-05bbc163cb49",
    "metadata": {},
    "source": [
-    "As we see that the test dataset is an iterable due to a rolling window. We will learn more about this in the next notebook on forecasting."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c984280-ee26-4daf-a777-85a097712220",
-   "metadata": {},
-   "source": [
+    "**Note:** The test dataset is organized as an iterable due to the rolling window approach. We will explore this concept in more detail in the next notebook on forecasting.\n",
+    "\n",
     "## Next Steps\n",
     "\n",
-    "Now, move onto the next notebook to formally understand Forecasting, basics and how to do time series splitting for model development."
+    "Proceed to the next notebook (`02_forecasting_basics.ipynb`) to formally understand forecasting basics and how to perform time series splitting for model development."
    ]
   }
  ],
