--- a/02_forecasting-basics.ipynb
+++ b/02_forecasting-basics.ipynb
@@ -2,59 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0fe02add-ece8-422b-9811-e056c1c6ff81",
+   "id": "570c5fd9-6be9-41d6-89ee-3a916ff759c3",
    "metadata": {},
    "source": [
-    "# Time series methods: Forecasting\n",
+    "# Time Series Methods: Forecasting\n",
     "\n",
-    "Recall that forecasting is one of many modeling approaches applied to time series datasets.\n",
+    "Forecasting is one of many modeling approaches applied to time series datasets. In this tutorial series, we will focus on forecasting techniques.\n",
     "\n",
-    "In this tutorial series, we will be focused on forecasting modeling techniques. \n",
-    "\n",
-    "In this notebook, we will specifically learn about the following --\n",
+    "In this notebook, we will cover:\n",
     "\n",
     "1. What is Forecasting?\n",
-    "2. How do we evaluate the forecasting methods?\n",
-    "3. How do split the train-test time series?\n",
-    "4. How can we use GluonTS to form our train-test splits? This will become handy in the later notebooks when we will use the machine learning models from GluonTS.\n",
-    "5. What are evalution metrics for forecasting?"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9d9dcec0-b995-4a7c-ac5e-d311b2fe3964",
-   "metadata": {},
-   "source": [
+    "2. How do we evaluate forecasting methods?\n",
+    "3. How do we split the train-test time series?\n",
+    "4. How can we use GluonTS to form our train-test splits? This will be useful in later notebooks when using machine learning models from GluonTS.\n",
+    "5. What are the evaluation metrics for forecasting?\n",
+    "\n",
     "## Basics\n",
     "\n",
-    "**Forecasting:** Given a time series of H time points, forecasting aims to predict the next $F$ future time points, where $F$ is the forecasting horizon.\n",
+    "**Forecasting:** Given a time series of $ T $ time points, forecasting aims to predict the next $ F $ future time points, where $ F $ is the forecasting horizon.\n",
     "\n",
-    "**How do we evaluate forecasting methods?**\n",
+    "**Evaluation of Forecasting Methods:** To evaluate forecasting methods, we split the dataset into training, validation, and testing sets. The validation set is used for hyperparameter tuning, while the test set is used to report the final performance metrics.\n",
     "\n",
-    "We split the dataset into training, validation and testing datasets. Within an estimation method, there might be several parameters that migth lead to varied performance. Therefore, validation dataset is used to select the hyperparameters. And the overall performance is reported using the test dataset. \n",
+    "*Note:* In machine learning, the dataset is split into train, validation, and test sets. The validation set is used to select hyperparameters, while the test set is reserved for final evaluation.\n",
     "\n",
-    "Note: You might recall from machine learning courses that the dataset is split into train, valid, and test. Teh validation dataset is used to select hyperparameters while the test dataset is kept to report metrics which is never touched upon. \n",
+    "**Splitting Time Series Datasets:** Time series datasets are different from traditional datasets due to their chronological ordering. Traditional datasets are often split randomly into train, validation, and test sets. However, time series datasets must be split chronologically.\n",
     "\n",
+    "We train estimators using data up to a certain point. We evaluate these estimators on the future data using a rolling window approach, where historical data expands, and/or the prediction window shifts forward.\n",
     "\n",
-    "**How do we split the time series dataset?**\n",
+    "## Setup\n",
     "\n",
-    "Time series datasets are different from traditional datasets in that they have a chronological ordering in them. \n",
-    "Most of the datasets used for traditional machine learning are assumed to be independent and identically distributed (iid), therefore a random splitting of the dataset into train, val, and test is a good choice. \n",
-    "However, a time series dataset need to be split chronologically, i.e., we train our estimators based on the data up until some time period. We test our estimators on a rolling window of this series, i.e., at any time during testing, we will have the entire time series up until that point, and our goal is to predict the future values up until some horizon $F$.\n",
-    "\n",
-    "In simple words, at each iteration, historical data expands, and the prediction window is shifted ahead from the end of the input data.\n",
-    "\n",
-    "## Train-Test Split\n",
-    "\n",
-    "Let's look at how training and test dataset has been split in this dataset.\n",
-    "We will focus on a single dimension here. \n",
-    "\n",
-    "The time series dataset splitting needs to follow chronoligcal order. \n",
-    "\n",
-    "The general class of machine learning models assumes independent and identically distributed observations in the dataset. If you recall, general strategy to split dataset is to randomly split the dataset into train, validation, and test. \n",
-    "\n",
-    "However, time series dataset has a chronological dependency in the observations, requiring a specific way to split the dataset. As a result, we split the dataset by time index instead. "
+    "We will load `m4` dataset we analyzed in `01.1_datasets-univariate-eda.ipynb`. We will use GluonTS used in the previous notebook to do so. "
    ]
   },
   {
@@ -199,6 +176,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44dbecb4-17de-4bcc-bdf0-1e0190f1febe",
+   "metadata": {},
+   "source": [
+    "### Visualizating Rolling/Expanding Window\n",
+    "\n",
+    "In this section, we will plot the training and test datasets using the rolling/expanding window approach.\n",
+    "\n",
+    "**Training data** is Used to build the estimator. **Test Data** is used to measure the performance.\n",
+    "\n",
+    "By visualizing these datasets, we can better understand how the rolling/expanding window technique applies to time series forecasting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "1017fa0e-0ad1-44a7-b4cd-b2baac6465cb",
@@ -254,18 +245,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42975342-acaf-4cd0-818a-c462f2d92d06",
-   "metadata": {},
-   "source": [
-    "**Note** Here the rolling windows might as well be called as expanding window as the historical data keeps expanding. If the model has a lookback window, i.e., the limit to what extent the model is allowed to look back, the window is more like a rolling window."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ebb98447-6c07-4b07-9147-74909e62c6b0",
    "metadata": {},
    "source": [
-    "## GluonTS for Train-Test Splitting"
+    "## GluonTS for Train-Test Splitting\n",
+    "\n",
+    "In GluonTS, we can import a pandas time series dataset and split it using the `PandasDataset` class. Here are the steps to specify how to split a dataset:\n",
+    "\n",
+    "1. Convert your pandas dataset into a `PandasDataset`, the internal format used by GluonTS.\n",
+    "2. Utilize the `gluonts.dataset.split` module to create iterables for the training and testing sets.\n",
+    "3. Indicate the index up to which you want to define the training dataset.\n",
+    "4. Define the prediction length and the rolling windows. This allows the function to partition the original dataset into incremental windows, with each window being `prediction_length` longer than the previous one."
    ]
   },
   {
@@ -291,20 +281,6 @@
     "\n",
     "gluon_data = PandasDataset(data, target='channel_1', freq='M')\n",
     "gluon_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "73c664d5-9c13-411a-8f9c-2165e40d9ed8",
-   "metadata": {},
-   "source": [
-    "In GLuonTS, we can import a pandas time series dataset and carry out its splitting with the help of `PandasDataset`. \n",
-    "\n",
-    "Here are the steps needed to specify how to split a dataset\n",
-    "- convert your pandas dataset into PandasDataset (internal version of gluonts.\n",
-    "- Use `gluonts.dataset.split` to make the iteraables for training set and testing set\n",
-    "- We need to specify the index until which we want to mark a training dataset\n",
-    "- We need to further specify prediction length and windows which lets the function decide how to partition the original dataset in incremental windows, with each windows predcition_length longer than the previous one."
    ]
   },
   {
@@ -400,9 +376,11 @@
    "id": "2132908f-40bc-4064-8fb8-1f3adf8c5f89",
    "metadata": {},
    "source": [
-    "We see that the GLuonTS nicely separates the train dataset into input, label pairs that can be used for evaluation of an estimator.\n",
+    "We see that GluonTS efficiently separates the training dataset into input-label pairs suitable for evaluating an estimator.\n",
     "\n",
-    "This calls for the question -- **What are the evaluation metrics for time series forecasting?**"
+    "This brings us to an important question:\n",
+    "\n",
+    "**What are the evaluation metrics for time series forecasting?**\n"
    ]
   },
   {
@@ -426,16 +404,15 @@
     "     \\text{MSE} = \\frac{1}{F} \\sum_{k=1}^{F} (\\hat{Y}_{T+k} - Y_{T+k})^2\n",
     "$$\n",
     "\n",
-    "3. **Root Mean Squared Error (RMSE)**\n",
-    "   - **Formula:** RMSE is essentially the square root of MSE, which adjusts the scale back to the original units of the data, making interpretation straightforward.\n",
+    "3. **Root Mean Squared Error (RMSE)** RMSE is essentially the square root of MSE, which adjusts the scale back to the original units of the data, making interpretation straightforward.\n",
     "\n",
     "$$\n",
     "     \\text{RMSE} = \\sqrt{\\frac{1}{F} \\sum_{k=1}^{F} (\\hat{Y}_{T+k} - Y_{T+k})^2}\n",
     "$$\n",
     "\n",
-    "4. **Mean Absolute Scaled Error (MASE)**: MASE scales the MAE by the MAE of a naive model. The naive model typically uses the last observed value as the prediction, or the last seasonally observed value if the data exhibits seasonality. This scaling makes MASE an error measure that is independent of the data's scale, providing a context of how well the model performs relative to a simple baseline.\n",
+    "4. **Mean Absolute Scaled Error (MASE)**: MASE scales the MAE by the MAE of a naive model. This scaling makes MASE an error measure that is independent of the data's scale, providing a context of how well the model performs relative to a simple baseline.\n",
     "\n",
-    "A naive MAE is defined over the historical data, not the forecasting period. It typically uses the last observation as the forecast for the next one. \n",
+    "A naive MAE is defined over the historical data, not the forecasting period. It typically uses the last observation as the forecast for the next one, or the last seasonally observed value if the data exhibits seasonality. \n",
     "\n",
     "$$\n",
     "     \\text{MASE} = \\frac{\\text{MAE}}{\\text{MAE}_{\\text{naive}}}\n",
@@ -450,14 +427,14 @@
     "     \\text{MASE} = \\frac{\\sum_{k=1}^{F} |\\hat{Y}_{T+k} - Y_{T+k}|}{\\frac{1}{T - 1}\\sum_{t=2}^{T} \\mid Y_{t - 1} - Y_{t} \\mid}\n",
     "$$\n",
     "\n",
-    "### Notes\n",
+    "**Notes**\n",
     "\n",
     "- MASE is particularly useful because it allows comparisons across different datasets and is not dependent on the scale of the data, making it ideal for benchmarks and comparisons between different forecasting models.\n",
     "\n",
-    "- It's important to consider the characteristics of your data and the specific requirements of your forecasting problem when choosing the appropriate metric(s) for evaluation. For example, if forecasting accuracy during peak demand periods is critical, then giving more weight to errors during those periods might be appropriate.\n",
+    "- It's important to consider the characteristics of your data and the specific requirements of your forecasting problem when choosing the appropriate metric(s) for evaluation.\n",
     "\n",
-    "\n",
-    "Several functions to compute the above metrics are provided in `utils.py`. Let's look at a very rough example on how to use MASE metric. You are welcome to read the code in `utils.py` to understand how these metrics work. "
+    "### Simple Evalaution\n",
+    "Several functions to compute the above metrics are provided in utils.py. Let's look at a rough example of how to use the MASE metric. You are encouraged to read the code in utils.py to understand how these metrics work."
    ]
   },
   {
@@ -508,11 +485,10 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "Now let's build some statistical forecasting methods for time series. Head over to the notebooks of the type `03.x_...`.\n",
+    "Let's build some statistical forecasting methods for time series. Proceed to the following notebooks:\n",
     "\n",
-    "\n",
-    "1. `03.1_classical_models_exploration.ipynb` contains the exploratory analysis of the time series dataset that we will use throughout the tutorial\n",
-    "2. `03.2_classical_models.ipynb` contains the models themselves.\n"
+    "1. `03.1_classical_models_exploration.ipynb`: Contains exploratory analysis of the time series dataset that we will use throughout the tutorial.\n",
+    "2. `03.2_classical_models.ipynb`: Contains the implementation of the statistical forecasting models.\n"
    ]
   }
  ],
