--- a/03.1_classical_models_exploration.ipynb
+++ b/03.1_classical_models_exploration.ipynb
@@ -9,12 +9,13 @@
     "\n",
     "In this notebook, we will set the stage for the development of forecasting methods throughout the tutorial series. \n",
     "\n",
-    "This particular notebook is to gain familiarty with exchange rate dataset. As a result, we will do the following -- \n",
-    "1. Load the dataset\n",
-    "2. Resample the dataset so that instead of daily exchange rate we look at weekly exchange rate. The choice of doing weekly prediction is borne out of the observation that the classical methods are very slow to optimize on the dataset of the size of daily exchange rates.\n",
-    "3. Do a train-test split of this dataset that we will use throughout the tutorial.\n",
+    "This particular notebook aims to familiarize ourselves with the exchange rate dataset. We will:\n",
     "\n",
-    "**Note:** We will make these loading and splitting function into a funciton in `utils.py` so that we don't repeat these sections in every notebook.\n"
+    "1. Import the exchange rate data for analysis.\n",
+    "2. Convert the daily exchange rates to weekly exchange rates. This choice is based on the observation that classical methods are very slow to optimize on large datasets.\n",
+    "3. Split the dataset into training and testing sets that will be used throughout the tutorial.\n",
+    "\n",
+    "**Note:** We will encapsulate these loading and splitting functions into a function in `utils.py` to avoid repetition in every notebook."
    ]
   },
   {
@@ -166,15 +167,13 @@
    "source": [
     "## Exploratory Analysis of Exchange Rate Dataset\n",
     "\n",
-    "To recall, here is the\n",
+    "To recap, the **exchange rate dataset** contains daily exchange rates from 1990 to 2016 for 8 countries: Australia, Britain, Canada, Switzerland, China, Japan, New Zealand, and Singapore. It includes a total of 8 univariate time series, each with 7,588 time steps.\n",
     "\n",
-    "**Exchange rate dataset** contains the daily exchange rates from 1990 to 2016 of 8 countries including Australia, British, Canda, Switzerland, China, Japan, New Zealand, and Signapore. ***It contains a total of 8 univariate time series for a total of 7588 time steps.***\n",
+    "Let's proceed with the usual exploration to gain familiarity with the dataset.\n",
     "\n",
-    "Let's follow the usual exploration to gain some familiarity with the dataset. \n",
+    "**Note:** We will only examine the **training data** to ensure that our choice of modeling techniques is not influenced by the validation or test data, thus preventing bias in the metrics.\n",
     "\n",
-    "**Note:** We only look at the training data so that our choice of modeling technique is not influenced by the validation or test data, thereby biasing the metrics.\n",
-    "\n",
-    "### Raw data"
+    "### Raw Data"
    ]
   },
   {
@@ -258,19 +257,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487c629b-7771-4990-a350-8c3d9aca1e4a",
-   "metadata": {},
-   "source": [
-    "**Observations:**\n",
-    "\n",
-    "\n",
-    "- Zero-Centered Seasonality indicates that the long-term effect of seasonality is minimal.\n",
-    "- Residual compoenent has some peaks suggesting that there are occasional deviations from the model due to unusual events or due to model's inadequacies\n",
-    "- Trend shows peridicity which might be due to the underling factors affecting the time series at a regular intervals\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "491a39be-51cd-4ad8-8aba-8b883540b4c3",
    "metadata": {},
    "source": [
@@ -300,6 +286,26 @@
    ],
    "source": [
     "utils.check_stationarity(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "293dc7c9-fef1-4c5e-a701-bdec478b2e63",
+   "metadata": {},
+   "source": [
+    "**Observations:**\n",
+    "\n",
+    "- Zero-Centered seasonality indicates that the long-term effect of seasonality is minimal.\n",
+    "- Residual component shows peaks, suggesting occasional deviations from the means\n",
+    "- Trend exhibits periodicity, likely due to underlying factors affecting the time series at regular intervals.\n",
+    "- None of the time series are stationary, implying that non-linear models may be required to model them well.\n",
+    "- Partial Autocorrelation Function (PACF) shows a sharp decline, indicating a strong correlation between the previous and next values.\n",
+    "- Autocorrelation Function (ACF) shows strong correlations across larger lags, indicating strong dependence between data points at various lags.\n",
+    "\n",
+    "\n",
+    "## Next Steps\n",
+    "\n",
+    "Proceed to `03.2_classical_models.ipynb` to explore classical forecasting methods on this dataset."
    ]
   }
  ],
